--- a/Javascript/multiplicationtable.html
+++ b/Javascript/multiplicationtable.html
@@ -22,7 +22,7 @@
                 ih += "</td>";
             }
             ih += "</tr>";
-            multitables.innerHTML = ih;
+            multitable.innerHTML = ih;
         }
     </script>
 </head>
